unit tests added

--- a/ThreadsSync/ThreadsSync_test/ThreadsSync_test.vcxproj
+++ b/ThreadsSync/ThreadsSync_test/ThreadsSync_test.vcxproj
@@ -238,6 +238,11 @@
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ThreadsSync\ThreadsSync.vcxproj">
+      <Project>{acc559c2-c376-4885-ac2a-881dc0e66053}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
